--- a/index3.html
+++ b/index3.html
@@ -24,11 +24,11 @@
         Sweet love of mine
         </div>
         <div>
-        She's got eyes of the bluest skies
-        As if they thought of rain
-        I'd hate to look into those eyes and see an ounce of pain
-        Her hair reminds me of a warm safe place
-        Where as a child I'd hide
+        She's got eyes of the bluest skies <br>
+        As if they thought of rain <br>
+        I'd hate to look into those eyes and see an ounce of pain  <br>
+        Her hair reminds me of a warm safe place <br>
+        Where as a child I'd hide <br>
         And pray for the thunder and the rain to quietly pass me by
         </div>
         <div>
